namespaces/cp-2501-1602.cloud-platform.service.justice.gov.uk/cp-test-b/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cp-test-b
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
    cloud-platform.justice.gov.uk/application: "testapp"
    cloud-platform.justice.gov.uk/owner: "cloud platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-environments"
    cloud-platform.justice.gov.uk/team-name: "webops"
